--- a/bibdata.bib
+++ b/bibdata.bib
@@ -13127,3 +13127,73 @@ year = {2010},
 address = {Antwerp, Belgium},
 }
 
+
+@Misc{SLOCCOUNT,
+  key = "SLOCCOUNT",
+  title = "{SLOCCount}",
+  note = "{\url{https://www.dwheeler.com/sloccount/}}",
+}
+
+
+@Misc{DebPopCon,
+  key = "DebPopCon",
+  title = "{Debian Popularity Contest}",
+  note = "{\url{http://popcon.debian.org}}",
+}
+
+
+@Misc{YumAptEndless,
+  key = "YumAptEndless",
+  title = "{Attacks on Package Managers}",
+  note = "{\url{https://www2.cs.arizona.edu/stork/packagemanagersecurity/otherattacks.html}}",
+}
+
+
+@Misc{Slowloris,
+  key = "Slowloris",
+  title = "{Apache HTTP DoS Tool Released}",
+  note = "{\url{https://isc.sans.edu/diary/Apache+HTTP+DoS+tool+released/6601}}",
+}
+
+
+@Misc{PHPRenameBug,
+  key = "PHPRenameBug",
+  title = "{rename of dirs across devices produces confusing copy error}",
+  note = "{\url{https://bugs.php.net/bug.php?id=54097}}",
+}
+
+
+@Misc{PythonShutilBug,
+  key = "PythonShutilBug",
+  title = "{Race conditions in shutil.copy, shutil.copy2, and shutil.copyfile}",
+  note = "{\url{https://bugs.python.org/issue15100}}",
+}
+
+
+@Misc{NodejsCopyBug,
+  key = "NodejsCopyBug",
+  title = "{Prevent copying a directory into itself}",
+  note = "{\url{https://github.com/jprichardson/node-fs-extra/issues/83}}",
+}
+  
+
+
+@Misc{NautilusTimestamps,
+  key = "NautilusTimestamps",
+  title = "{Nautilus not preserving timestamps}",
+  note = "{\url{https://bugs.launchpad.net/ubuntu/+source/glib2.0/+bug/215499}}",
+}
+
+
+@Misc{SudoTimestamp,
+  key = "SudoTimestamp",
+  title = "{sudo: timestamp too far in the future}",
+  note = "{\url{https://bugs.launchpad.net/ubuntu/+source/sudo/+bug/76639}}",
+}
+
+
+@Misc{AppleCodesigning,
+  key = "AppleCodesigning",
+  title = "{macOS Code Signing In Depth}",
+  note = "{\url{https://developer.apple.com/library/content/technotes/tn2206/\_index.html}}",
+}
