--- a/bibdata.bib
+++ b/bibdata.bib
@@ -13197,3 +13197,12 @@ address = {Antwerp, Belgium},
   title = "{macOS Code Signing In Depth}",
   note = "{\url{https://developer.apple.com/library/content/technotes/tn2206/\_index.html}}",
 }
+
+@TechReport{Cappos_TR_08,
+   Author       = "Justin Cappos and Justin Samuel and Scott Baker and John Hartman",
+   Title        = "{Package Management Security}",
+   Institution  = "Department of Computer Science, University of Arizona",
+   Number       = "TR--08--02",
+   Year         = 2008
+}
+
