--- a/annotations.tex
+++ b/annotations.tex
@@ -40,8 +40,10 @@
 \newcommand{\nb}[2]{\nbc{#1}{#2}{orange}}
 
 \definecolor{jccolor}{rgb}{0.2,0.4,0.6}
+\definecolor{pfcolor}{rgb}{0.4,0.2,0.4}
 \definecolor{pmcolor}{rgb}{0.8,0.4,0.6}
 \definecolor{clcolour}{rgb}{0.5,0.7,0.9}
 \newcommand\cappos[1]{\nbc{JC}{#1}{jccolor}}
+\newcommand\phyllis[1]{\nbc{PF}{#1}{pfcolor}}
 \newcommand\preston[1]{\nbc{PM}{#1}{pmcolor}}
 \usepackage{wasysym}
